# VMLS-Python

./: README.md  VMLS Python, Ch.01 Vectors.ipynb  VMLS Python, Ch.02 Linear Functions.ipynb  VMLS Python, Ch.03 Norm.ipynb  VMLS Python, Ch.04 Clustering.ipynb  VMLS Python, Ch.05 Linear Independence.ipynb  VMLS Python, Ch.06 Matrices.ipynb  VMLS Python, Ch.07 Geometric Transformations.ipynb  VMLS Python, Ch.08 Linear and Affine Functions.ipynb  VMLS Python, Ch.09 Linear Dynamical Systems.ipynb  VMLS Python, Ch.10 Matrix Matrix Multiplication.ipynb  VMLS Python, Ch.11 Inverses.ipynb  VMLS Python, Ch.12 Least Squares.ipynb  VMLS Python, Ch.13 Least Squares Data Fitting.ipynb  VMLS Python, Ch.14 Classification.ipynb  VMLS Python, Ch.15 Multi Objective Least Squares.ipynb  VMLS Python, Ch.16 Constrained Least Squares.ipynb  VMLS Python, Ch.17 Portfolio Optimization.ipynb  VMLS Python, Ch.18 Nonlinear Equations and Least Squares.ipynb  VMLS Python, Ch.19 Constrained Nonlinear Least Squares.ipynb  pyproject.toml
